<resources>
    <string name="app_name">ChatProject</string>
    <string name="title_home">홈</string>
    <string name="title_peoples">사람</string>
    <string name="title_message">메시지</string>
    <string name="title_my_page">마이페이지</string>
    <string name="title_career">채용</string>
    <string name="btn_chat">대화하기</string>
    <string name="hint_id">아이디</string>
    <string name="hint_name">이름</string>
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_position">업무 포지션</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>