<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_peoples_black_24"
        android:title="@string/title_peoples" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/ic_my_page_black_24"
        android:title="@string/title_my_page" />

    <item
        android:id="@+id/navigation_career"
        android:icon="@drawable/ic_career_black_24"
        android:title="@string/title_career" />

</menu>