<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="me.saeha.android.chatproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="me.saeha.android.chatproject.ui.peoples.PeoplesFragment"
        android:label="@string/title_peoples"
        tools:layout="@layout/fragment_peoples" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="me.saeha.android.chatproject.ui.message.MessagesFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="me.saeha.android.chatproject.ui.my.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />

    <fragment
        android:id="@+id/navigation_career"
        android:name="me.saeha.android.chatproject.ui.career.CareerFragment"
        android:label="@string/title_career"
        tools:layout="@layout/fragment_career" />
</navigation>